<resources>
    <string name="app_name">ExChat</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="signup">SignUp</string>
    <string name="logout">Logout</string>
    <string name="please_set_username">please set username</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
</resources>