<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_login_loginPic"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="120dp"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_launcher_background"
            android:layout_marginTop="80dp"
            app:layout_constraintDimensionRatio="1,1"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"/>

      <!--  <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_userName"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/civ_login_loginPic"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="true"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            android:layout_height="wrap_content">
            <com.dust.exchat.presentation.cviews.edittext.BoldEdittext
                android:layout_width="match_parent"
                android:padding="15dp"
                android:hint="@string/username"
                android:textColor="?TextColorEdittext"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_email"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/civ_login_loginPic"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            app:errorEnabled="true"
            android:layout_height="wrap_content">
            <com.dust.exchat.presentation.cviews.edittext.BoldEdittext
                android:layout_width="match_parent"
                android:padding="15dp"
                android:hint="@string/email"
                android:textColor="?TextColorEdittext"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

      <!--  <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_phoneNumber"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/til_login_email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            app:errorEnabled="true"
            android:layout_height="wrap_content">
            <com.dust.exchat.presentation.cviews.edittext.BoldEdittext
                android:layout_width="match_parent"
                android:padding="15dp"
                android:hint="@string/phone_number"
                android:textColor="?TextColorEdittext"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_password"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/til_login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <com.dust.exchat.presentation.cviews.edittext.BoldEdittext
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textColor="?TextColorEdittext"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_passwordConfirm"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/til_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <com.dust.exchat.presentation.cviews.edittext.BoldEdittext
                android:layout_width="match_parent"
                android:padding="15dp"
                android:inputType="textPassword"
                android:hint="@string/confirmpassword"
                android:textSize="15sp"
                android:textColor="?TextColorEdittext"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_login_loginSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_login_passwordConfirm"
            android:orientation="horizontal">
            <com.dust.exchat.presentation.cviews.button.BoldButton
                android:id="@+id/btn_login_login"
                android:layout_width="150dp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_login_passwordConfirm"
                android:layout_height="wrap_content"/>

            <com.dust.exchat.presentation.cviews.button.BoldButton
                android:id="@+id/btn_login_signup"
                android:layout_width="150dp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_login_passwordConfirm"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_login_progressbar"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/ll_login_loginSignup"
            app:layout_constraintTop_toTopOf="@+id/ll_login_loginSignup"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/ll_login_loginSignup"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>